# rust-obs-plugins

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
obs-rs-sys/: Cargo.toml
obs-sys/: build.rs
obs-sys-rs/: Cargo.toml  README.md  build.rs  build_mac.rs  build_win.rs
obs-sys-rs/src/: lib.rs
plugins/avatar-plugin/src/: lib.rs
src/: data.rs  hotkey.rs  lib.rs  log.rs  module.rs  properties.rs
src/encoder/: context.rs  ffi.rs  mod.rs
src/frontend/: callbacks.rs  canvas.rs  event.rs  lists.rs  mod.rs  qt.rs
src/graphics/: display.rs  mod.rs
src/media/: audio.rs  state.rs  video.rs
src/output/: context.rs  ffi.rs  mod.rs  traits.rs
src/service/: context.rs  ffi.rs  mod.rs  traits.rs
src/source/: context.rs  ffi.rs  mod.rs  push.rs  scene.rs  traits.rs
