[package]
name = "obs-rs"
version = "0.5.0-tm"
authors = [
    "Bennett Hardwick <me@bennetthardwick.com>",
    "Christopher Tam <ohgodtamit@gmail.com",
]
edition = "2024"
license = "GPL-2.0"
description = "Safe wrapper of obs-rs-sys"
repository = "https://github.com/TakiMoysha/rust-obs-plugins"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["obs-rs-sys", "plugins/*"]

[features]
default = ["obs-32", "frontend-api"]
obs-30 = ["obs-rs-sys/obs-30"]
obs-31 = ["obs-rs-sys/obs-31"]
obs-32 = ["obs-rs-sys/obs-32"]
# Wraps `obs-frontend-api`, OBS Studio's UI-side plugin API. The C library
# is already linked unconditionally by `obs-rs-sys`; this feature toggles
# the Rust wrappers, not the link line. Disable to shrink compile time when
# building plugins that only touch the source / output APIs.
frontend-api = []

[dependencies]
obs-rs-sys = { path = "./obs-rs-sys", version = "0.4.0-tm", default-features = false }
paste = "1.0.15"
log = { version = "0.4.28", features = ["std"] }
num-traits = "0.2.19"
thiserror = "2.0.17"
