[package]
name = "obs-rs-sys"
version = "0.1.0"
authors = [
    "Bennett Hardwick <me@bennetthardwick.com>",
    "Christopher Tam <ohgodtamit@gmail.com>",
]
edition = "2024"
links = "obs"
description = "Bindgen of OBS C APIs."
license = "GPL-2.0"
repository = "https://github.com/liveonassist/obs-rs"

[features]
default = ["obs-32"]
obs-30 = []
obs-31 = []
obs-32 = []

[build-dependencies]
bindgen = "0.72"

[target.'cfg(windows)'.build-dependencies]
cc = "1.2"
regex = "1.12"
winreg = "0.55"

[target.'cfg(target_os = "macos")'.build-dependencies]
shellexpand = "3.1"
